# very-fast-math

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  MODULE.bazel  README.md  benchmarking.py  build.bash  cex.xml  graph_tools.py  main.py  main_template.json  model_checking.py  requirements.txt  scenario_generation.py  script.py  show.bash
gtest/: CMakeLists.txt  our_sample_test.cpp
src/: CMakeLists.txt  code_block.cpp  cpp_parser.cpp  cpp_type_atomic.cpp  cpp_type_enum.cpp  cpp_type_struct.cpp  cryptor_encoder.cpp  cryptor_rule.cpp  cryptor_starter.cpp  cryptor_tester.cpp  custom_widgets.cpp  dat_src_arr.cpp  dat_src_arr_as_float_vector.cpp  dat_src_arr_as_random_access_file.cpp  dat_src_arr_as_readonly_random_access_file.cpp  dat_src_arr_as_readonly_string.cpp  dat_src_arr_as_string.cpp  dat_src_arr_null.cpp  dat_src_arr_readonly.cpp  data_pack.cpp  earley_edge.cpp  earley_grammar.cpp  earley_parse_tree.cpp  earley_parser.cpp  earley_rec_rule.cpp  earley_recognizer.cpp  environment_model_generator.cpp  equation.cpp  failable.cpp  fsm_resolver.cpp  fsm_resolver_default.cpp  fsm_resolver_default_max_trans_weight.cpp  fsm_resolver_factory.cpp  fsm_resolver_remain_on_no_transition.cpp  fsm_resolver_remain_on_no_transition_and_obey_insertion_order.cpp  fsm_singleton_generator.cpp  fsm_transition.cpp  gui.cpp  highway_image.cpp  images.cpp  (+75 more)
src/asmjit/: README.md
src/asmjit/.github/workflows/: build-config.json  build.yml
src/asmjit/src/: asmjit.natvis
src/asmjit/src/asmjit/: asmjit-scope-begin.h  asmjit-scope-end.h  asmjit.h  core.h  x86.h
src/asmjit/src/asmjit/core/: api-build_p.h  api-config.h  archcommons.h  archtraits.cpp  archtraits.h  assembler.cpp  assembler.h  builder.cpp  builder.h  codebuffer.h  codeholder.cpp  codeholder.h  codewriter.cpp  codewriter_p.h  compiler.cpp  compiler.h  compilerdefs.h  constpool.cpp  constpool.h  cpuinfo.cpp  cpuinfo.h  datatypes.h  emithelper.cpp  emithelper_p.h  emitter.cpp  emitter.h  emitterutils.cpp  emitterutils_p.h  environment.cpp  environment.h  errorhandler.cpp  errorhandler.h  features.h  formatter.cpp  formatter.h  func.cpp  func.h  (+50 more)
src/asmjit/test/: asmjit_test_assembler.cpp  asmjit_test_assembler.h  asmjit_test_assembler_x64.cpp  asmjit_test_assembler_x86.cpp  asmjit_test_compiler.cpp  asmjit_test_compiler.h  asmjit_test_compiler_x86.cpp  asmjit_test_emitters.cpp  asmjit_test_instinfo.cpp  asmjit_test_misc.h  asmjit_test_perf.cpp  asmjit_test_perf.h  asmjit_test_perf_x86.cpp  asmjit_test_unit.cpp  asmjit_test_x86_sections.cpp  broken.cpp  broken.h  cmdline.h  performancetimer.h
src/asmjit/tools/: configure-makefiles.sh  configure-ninja.sh  configure-sanitizers.sh  tablegen-x86.js  tablegen.js
src/examples/: .gitignore  hello_world_environment.cpp  hello_world_environment.h
src/examples/bp/: delete_all_files_except_patterns.sh  readme.txt
src/examples/dummy_planner/: planner.cpp  vfm-includes-planner.txt  vfm-options-planner.txt
src/examples/ego_less/: evaluation.cpp  vfm-includes.txt
src/examples/feasibility/: feasibility.cpp  vfm-includes.txt  vfm-options.txt
src/examples/grepdep/: create_dependency_tree.hpp  create_visualization.hpp  dependency_node.hpp  dependency_tree.hpp  dependency_tree.test.cpp  exec.hpp  find_utilities.hpp  grepdep.cpp  grepdep_options.hpp  input_parser.hpp  migrated_mapping.hpp  migrated_mapping.test.cpp  string_utilities.hpp
src/fltk/: config.h  config.status  configure  fltk-config  fltk.list  fltk.spec  makeinclude
src/fltk/FL/: Fl_Input_.H
src/fltk/documentation/src/: blocks.6  checkers.6  fltk-config.1  fltk-options.1  fltk.3  fluid.1  sudoku.6
src/fltk/fltk-options/: fltk-options
src/fltk/fluid/: fluid
src/fltk/src/: Fl_GIF_Image.cxx
src/fltk/test/: CubeView  adjuster  animated  arc  ask  bitmap  blocks  boxtype  browser  button  buttons  cairo_test  checkers  clipboard  clock  colbrowser  color_chooser  contrast  cursor  curve  demo  device  doublebuffer  editor  fast_slow  file_chooser  flex_demo  flex_login  fltk-versions  fonts  forms  grid_alignment  grid_buttons  grid_dialog  grid_login  hello  help_dialog  icon  iconize  image  (+54 more)
src/haru/: hpdf_3dmeasure.c  hpdf_annotation.c  hpdf_array.c  hpdf_binary.c  hpdf_boolean.c  hpdf_catalog.c  hpdf_destination.c  hpdf_dict.c  hpdf_direct.c  hpdf_doc.c  hpdf_doc_png.c  hpdf_encoder.c  hpdf_encoder_cns.c  hpdf_encoder_cnt.c  hpdf_encoder_jp.c  hpdf_encoder_kr.c  hpdf_encoder_utf.c  hpdf_encrypt.c  hpdf_encryptdict.c  hpdf_error.c  hpdf_exdata.c  hpdf_ext_gstate.c  hpdf_font.c  hpdf_font_cid.c  hpdf_font_tt.c  hpdf_font_type1.c  hpdf_fontdef.c  hpdf_fontdef_base14.c  hpdf_fontdef_cid.c  hpdf_fontdef_cns.c  hpdf_fontdef_cnt.c  hpdf_fontdef_jp.c  hpdf_fontdef_kr.c  hpdf_fontdef_tt.c  hpdf_fontdef_type1.c  hpdf_gstate.c  hpdf_image.c  hpdf_image_ccitt.c  hpdf_image_png.c  hpdf_info.c  (+19 more)
src/templates/: EnvModel.tpl  EnvModel_Abstract.tpl  EnvModel_Abstract_Behavior_Nonego.tpl  EnvModel_Abstract_Common_Sections.tpl  EnvModel_Abstract_Macros.tpl  EnvModel_Abstract_Sections.tpl  EnvModel_Alberto_macros.tpl  EnvModel_Alberto_three_cars_five_secs.tpl  EnvModel_Alberto_two_cars.tpl  EnvModel_AngleBasedLC.tpl  EnvModel_Behavior_Ego.tpl  EnvModel_Behavior_Nonego.tpl  EnvModel_Common_Sections.tpl  EnvModel_Constants.tpl  EnvModel_Debug.tpl  EnvModel_DummyBP.tpl  EnvModel_Feasibility.tpl  EnvModel_Geometry.tpl  EnvModel_Header.tpl  EnvModel_IncludeFiles.txt  EnvModel_Parameters.tpl  EnvModel_Scaling.tpl  EnvModel_Sections.tpl  EnvModel_Timescaling.tpl  README_abstract.txt  envmodel_config.tpl.json  envmodel_config_2.tpl.json  envmodel_config_roundabout_with_zero_length_sections.tpl.json  envmodel_config_ucd.tpl.json  logo.pptx  main.tpl  main_addons.tpl  perspective.txt  preview.img  script.tpl  script.txt  script_abstract.tpl  script_concrete.tpl  script_immediate.tpl
src/templates/precompiled_scripts/: workflow.tpl
src/templates/precompiled_scripts/invar_full/: script.cmd
src/templates/precompiled_scripts/ltl/: script.cmd
src/templates/precompiled_scripts/ltl_full/: script.cmd
(+290 files in other folders)
