cc_library(
    name = "vfm",
    srcs = [
        "src/data_pack.cpp",
        "src/dat_src_arr_as_float_vector.cpp",
        "src/dat_src_arr.cpp",
        "src/dat_src_arr_as_random_access_file.cpp",
        "src/dat_src_arr_as_readonly_random_access_file.cpp",
        "src/dat_src_arr_as_readonly_string.cpp",
        "src/dat_src_arr_as_string.cpp",
        "src/dat_src_arr_null.cpp",
        "src/dat_src_arr_readonly.cpp",
        "src/equation.cpp",
        "src/fsm_singleton_generator.cpp",
        "src/fsm_transition.cpp",
        "src/fsm_resolver.cpp",
        "src/fsm_resolver_default.cpp",
        "src/fsm_resolver_remain_on_no_transition.cpp",
        "src/fsm_resolver_remain_on_no_transition_and_obey_insertion_order.cpp",
        "src/fsm_resolver_default_max_trans_weight.cpp",
        "src/fsm_resolver_factory.cpp",
        "src/math_struct.cpp",
        "src/meta_rule.cpp",
        "src/operator_structure.cpp",
        "src/parser.cpp",
        "src/failable.cpp",
        "src/static_helper.cpp",
        "src/term.cpp",
        "src/term_abs.cpp",
        "src/term_arith.cpp",
        "src/term_array.cpp",
        "src/term_compound.cpp",
        "src/term_const.cpp",
        "src/term_div.cpp",
        "src/term_array_length.cpp",
        "src/term_logic.cpp",
        "src/term_logic_and.cpp",
        "src/term_logic_eq.cpp",
        "src/term_logic_gr.cpp",
        "src/term_logic_greq.cpp",
        "src/term_logic_neq.cpp",
        "src/term_logic_or.cpp",
        "src/term_logic_sm.cpp",
        "src/term_logic_smeq.cpp",
        "src/term_delete.cpp",
        "src/term_malloc.cpp",
        "src/term_meta.cpp",
        "src/term_optional.cpp",
        "src/term_anyway.cpp",
        "src/term_minus.cpp",
        "src/term_mod.cpp",
        "src/term_max.cpp",
        "src/term_min.cpp",
        "src/term_mult.cpp",
        "src/term_neg.cpp",
        "src/term_plus.cpp",
        "src/term_pow.cpp",
        "src/term_rand.cpp",
        "src/term_trunc.cpp",
        "src/term_val.cpp",
        "src/term_var.cpp",
        "src/term_set_var.cpp",
        "src/term_set_arr.cpp",
        "src/term_get_arr.cpp",
        "src/term_while_limited.cpp",
        "src/term_sqrt.cpp",
        "src/term_rsqrt.cpp",
        "src/term_func_ref.cpp",
        "src/term_func_eval.cpp",
        "src/term_func_lambda.cpp",
        "src/term_literal.cpp",
        "src/test_functions.cpp",
        "src/images.cpp",
        "src/model_checker.cpp",
        "src/type_abstraction_layer.cpp",
        "src/term_fctin.cpp",
        "src/term_print.cpp",
        "src/cryptor_encoder.cpp",
        "src/cryptor_rule.cpp",
        "src/cryptor_starter.cpp",
        "src/cryptor_tester.cpp",
        "src/cpp_type_struct.cpp",
        "src/cpp_type_atomic.cpp",
        "src/cpp_type_enum.cpp",
        "src/cpp_parser.cpp",
        "src/earley_parser.cpp",
        "src/earley_edge.cpp",
        "src/earley_grammar.cpp",
        "src/earley_parse_tree.cpp",
        "src/earley_recognizer.cpp",
        "src/earley_rec_rule.cpp",
        "src/yaaa_runnable.cpp",
        "src/yaaa_activity.cpp",
        "src/yaaa_graph.cpp",
        "src/mc_trajectory_generator.cpp",
        "src/mc_trajectory_configs.cpp",
        "src/mc_trajectory_config_helpers.cpp",
        "src/mc_trajectory_to_gif.cpp",
        "src/mc_trajectory_to_osc.cpp",
        "src/mc_visualization_launchers.cpp",
        "src/smv_module.cpp",
        "src/smv_module_elements.cpp",
        "src/script.cpp",
        "src/environment_model_generator.cpp",
        "src/highway_image.cpp",
        "src/simplification_function.cpp",
        "src/interactive_testing.cpp",
        "src/haru/hpdf_3dmeasure.c",
        "src/haru/hpdf_annotation.c",
        "src/haru/hpdf_array.c",
        "src/haru/hpdf_binary.c",
        "src/haru/hpdf_boolean.c",
        "src/haru/hpdf_catalog.c",
        "src/haru/hpdf_destination.c",
        "src/haru/hpdf_dict.c",
        "src/haru/hpdf_direct.c",
        "src/haru/hpdf_doc.c",
        "src/haru/hpdf_doc_png.c",
        "src/haru/hpdf_encoder.c",
        "src/haru/hpdf_encoder_cns.c",
        "src/haru/hpdf_encoder_cnt.c",
        "src/haru/hpdf_encoder_jp.c",
        "src/haru/hpdf_encoder_kr.c",
        "src/haru/hpdf_encoder_utf.c",
        "src/haru/hpdf_encrypt.c",
        "src/haru/hpdf_encryptdict.c",
        "src/haru/hpdf_error.c",
        "src/haru/hpdf_exdata.c",
        "src/haru/hpdf_ext_gstate.c",
        "src/haru/hpdf_font.c",
        "src/haru/hpdf_font_cid.c",
        "src/haru/hpdf_font_tt.c",
        "src/haru/hpdf_font_type1.c",
        "src/haru/hpdf_fontdef.c",
        "src/haru/hpdf_fontdef_base14.c",
        "src/haru/hpdf_fontdef_cid.c",
        "src/haru/hpdf_fontdef_cns.c",
        "src/haru/hpdf_fontdef_cnt.c",
        "src/haru/hpdf_fontdef_jp.c",
        "src/haru/hpdf_fontdef_kr.c",
        "src/haru/hpdf_fontdef_tt.c",
        "src/haru/hpdf_fontdef_type1.c",
        "src/haru/hpdf_gstate.c",
        "src/haru/hpdf_image.c",
        "src/haru/hpdf_image_ccitt.c",
        "src/haru/hpdf_image_png.c",
        "src/haru/hpdf_info.c",
        "src/haru/hpdf_list.c",
        "src/haru/hpdf_mmgr.c",
        "src/haru/hpdf_name.c",
        "src/haru/hpdf_namedict.c",
        "src/haru/hpdf_null.c",
        "src/haru/hpdf_number.c",
        "src/haru/hpdf_objects.c",
        "src/haru/hpdf_outline.c",
        "src/haru/hpdf_page_label.c",
        "src/haru/hpdf_page_operator.c",
        "src/haru/hpdf_pages.c",
        "src/haru/hpdf_pdfa.c",
        "src/haru/hpdf_real.c",
        "src/haru/hpdf_shading.c",
        "src/haru/hpdf_streams.c",
        "src/haru/hpdf_string.c",
        "src/haru/hpdf_u3d.c",
        "src/haru/hpdf_utils.c",
        "src/haru/hpdf_xref.c",
    ],
    hdrs = [
        "include/callback.h",
        "include/cpp_parsing/cpp_parser.h",
        "include/cpp_parsing/cpp_type_atomic.h",
        "include/cpp_parsing/cpp_type_enum.h",
        "include/cpp_parsing/cpp_type_struct.h",
        "include/cpp_parsing/input_parser.h",
        "include/cryptor/cryptor_encoder.h",
        "include/cryptor/cryptor_rule.h",
        "include/cryptor/cryptor_starter.h",
        "include/cryptor/cryptor_tester.h",
        "include/data_pack.h",
        "include/dat_src_arr.h",
        "include/dat_src_arr_as_float_vector.h",
        "include/dat_src_arr_as_random_access_file.h",
        "include/dat_src_arr_as_readonly_random_access_file.h",
        "include/dat_src_arr_as_readonly_string.h",
        "include/dat_src_arr_as_string.h",
        "include/dat_src_arr_null.h",
        "include/dat_src_arr_readonly.h",
        "include/earley/earley_grammar.h",
        "include/earley/parser/earley_edge.h",
        "include/earley/parser/earley_parser.h",
        "include/earley/parser/earley_parse_tree.h",
        "include/earley/recognizer/earley_recognizer.h",
        "include/earley/recognizer/earley_rec_rule.h",
        "include/enum_wrapper.h",
        "include/equation.h",
        "include/examples/fct_enumdefinitions.h",
        "include/failable.h",
        "include/fsm.h",
        "include/fsm_resolver.h",
        "include/fsm_resolver_default.h",
        "include/fsm_resolver_default_max_trans_weight.h",
        "include/fsm_resolver_factory.h",
        "include/fsm_resolver_remain_on_no_transition.h",
        "include/fsm_resolver_remain_on_no_transition_and_obey_insertion_order.h",
        "include/fsm_singleton_generator.h",
        "include/fsm_transition.h",
        "include/geometry/abstract_object.h",
        "include/geometry/circle_2d.h",
        "include/geometry/gif_writer.h",
        "include/geometry/haru/hpdf.h",
        "include/geometry/haru/hpdf_3dmeasure.h",
        "include/geometry/haru/hpdf_annotation.h",
        "include/geometry/haru/hpdf_catalog.h",
        "include/geometry/haru/hpdf_conf.h",
        "include/geometry/haru/hpdf_config.h",
        "include/geometry/haru/hpdf_consts.h",
        "include/geometry/haru/hpdf_destination.h",
        "include/geometry/haru/hpdf_doc.h",
        "include/geometry/haru/hpdf_encoder.h",
        "include/geometry/haru/hpdf_encrypt.h",
        "include/geometry/haru/hpdf_encryptdict.h",
        "include/geometry/haru/hpdf_error.h",
        "include/geometry/haru/hpdf_exdata.h",
        "include/geometry/haru/hpdf_ext_gstate.h",
        "include/geometry/haru/hpdf_font.h",
        "include/geometry/haru/hpdf_fontdef.h",
        "include/geometry/haru/hpdf_gstate.h",
        "include/geometry/haru/hpdf_image.h",
        "include/geometry/haru/hpdf_info.h",
        "include/geometry/haru/hpdf_list.h",
        "include/geometry/haru/hpdf_mmgr.h",
        "include/geometry/haru/hpdf_namedict.h",
        "include/geometry/haru/hpdf_objects.h",
        "include/geometry/haru/hpdf_outline.h",
        "include/geometry/haru/hpdf_pages.h",
        "include/geometry/haru/hpdf_page_label.h",
        "include/geometry/haru/hpdf_pdfa.h",
        "include/geometry/haru/hpdf_streams.h",
        "include/geometry/haru/hpdf_types.h",
        "include/geometry/haru/hpdf_u3d.h",
        "include/geometry/haru/hpdf_utils.h",
        "include/geometry/haru/hpdf_version.h",
        "include/geometry/images.h",
        "include/geometry/line_2d.h",
        "include/geometry/line_3d.h",
        "include/geometry/line_segment_2d.h",
        "include/geometry/line_segment_3d.h",
        "include/geometry/plane_3d.h",
        "include/geometry/polygon_2d.h",
        "include/geometry/polygon_3d.h",
        "include/geometry/rectangle_2d.h",
        "include/geometry/stb_image_write.h",
        "include/geometry/vector_2d.h",
        "include/geometry/vector_3d.h",
        "include/json_parsing/json.hpp",
        "include/math_struct.h",
        "include/meta_rule.h",
        "include/model_checking/counterexample_replay.h",
        "include/model_checking/environment_model_generator.h",
        "include/model_checking/mc_types.h",
        "include/model_checking/model_checker.h",
        "include/model_checking/msatic_parsing/msatic_trace.h",
        "include/model_checking/simplification.h",
        "include/model_checking/smv_parsing/smv_module.h",
        "include/model_checking/smv_parsing/smv_module_elements.h",
        "include/model_checking/cex_processing/mc_trajectory_configs.h",
        "include/model_checking/cex_processing/mc_trajectory_config_helpers.h",
        "include/model_checking/cex_processing/mc_trajectory_generator.h",
        "include/model_checking/cex_processing/mc_trajectory_visualizers.h",
        "include/model_checking/cex_processing/mc_visualization_launchers.h",
        "include/model_checking/type_abstraction_layer.h",
        "include/model_checking/yaaa_activity.h",
        "include/model_checking/yaaa_graph.h",
        "include/model_checking/yaaa_runnable.h",
        "include/operator_structure.h",
        "include/parsable.h",
        "include/parser.h",
        "include/simplification/simplification.h",
        "include/simplification/simplification_pos.h",
        "include/simplification/simplification_function.h",
        "include/simulation/env2d_simple.h",
        "include/simulation/highway_image.h",
        "include/simulation/highway_translators.h",
        "include/simulation/very_fast_simulation/environment_2d.h",
        "include/simulation/very_fast_simulation/event.h",
        "include/simulation/very_fast_simulation/marb_evolution.h",
        "include/simulation/very_fast_simulation/master_scheduler.h",
        "include/simulation/very_fast_simulation/par_collection.h",
        "include/simulation/very_fast_simulation/plugin.h",
        "include/simulation/very_fast_simulation/simulation_starter.h",
        "include/simulation/very_fast_simulation/simulation_time.h",
        "include/simulation/wink.h",
        "include/static_helper.h",
        "include/term.h",
        "include/term_abs.h",
        "include/term_anyway.h",
        "include/term_arith.h",
        "include/term_array.h",
        "include/term_array_length.h",
        "include/term_compound.h",
        "include/term_const.h",
        "include/term_delete.h",
        "include/term_div.h",
        "include/term_fctin.h",
        "include/term_func_eval.h",
        "include/term_func_lambda.h",
        "include/term_func_ref.h",
        "include/term_get_arr.h",
        "include/term_literal.h",
        "include/term_logic.h",
        "include/term_logic_and.h",
        "include/term_logic_eq.h",
        "include/term_logic_gr.h",
        "include/term_logic_greq.h",
        "include/term_logic_neq.h",
        "include/term_logic_or.h",
        "include/term_logic_sm.h",
        "include/term_logic_smeq.h",
        "include/term_malloc.h",
        "include/term_max.h",
        "include/term_meta.h",
        "include/term_min.h",
        "include/term_minus.h",
        "include/term_mod.h",
        "include/term_mult.h",
        "include/term_neg.h",
        "include/term_optional.h",
        "include/term_plus.h",
        "include/term_pow.h",
        "include/term_print.h",
        "include/term_rand.h",
        "include/term_rsqrt.h",
        "include/term_set_arr.h",
        "include/term_set_var.h",
        "include/term_sqrt.h",
        "include/term_trunc.h",
        "include/term_val.h",
        "include/term_var.h",
        "include/term_while_limited.h",
        "include/testing/test_functions.h",
        "include/vfmacro/script.h",
        "include/testing/interactive_testing.h",
        "include/t4.h",
    ],
    copts = [
        "-I" + package_name() + "include",
    ],
    visibility = [
        "//vfm:__subpackages__",
    ],
    strip_include_prefix = "include",
    linkstatic = True,
    local_defines = [],
    deps = [],
)


cc_binary(
    name = "vfm_execute",
    srcs = [
        "src/main.cpp",
    ],
    linkstatic = True,
    deps = [
        "//:vfm",
    ],
)
